Fixed overflow on small window size.

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -16,6 +16,12 @@
 @import 'components/_params.css';
 @import 'components/_screenContainer.css';
 
+body {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
 #root {
   width: 100vw;
   height: 100vh;
